--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -7,11 +7,13 @@
 
 */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     font-family: 'Nunito Sans', sans-serif;
 }
+
 body {
     background-color: #2f3e46;
     padding: 10px;
@@ -41,17 +43,18 @@ body {
 }
 
 .center-container {
-    flex: 1; 
-    margin: 0 10px; 
+    flex: 1;
+    margin: 0 10px;
 }
 
 /* center */
-.center-top{
+.center-top {
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
 }
-.center-top li{
+
+.center-top li {
     list-style: none;
     width: 50px;
     height: 50px;
@@ -64,7 +67,8 @@ body {
     color: #ffff;
     font-size: 10px;
 }
-.center-top-underline{
+
+.center-top-underline {
     /* width: 90%; */
     border: 2px solid #52796f;
     border-radius: 10px;
@@ -72,18 +76,21 @@ body {
     margin-top: 10px;
 }
 
-.logo{
+.logo {
     text-align: center;
 }
+
 /* Left */
-.logo-1{
+.logo-1 {
     color: #ffff;
 }
-.logo-2{
+
+.logo-2 {
     color: #84a98c;
 }
+
 /* Search */
-.searchSubmit{
+.searchSubmit {
     background-color: #2f3e46;
     width: 65px;
     height: 45px;
@@ -96,34 +103,50 @@ body {
     font-weight: 500;
     font-size: 15px;
 }
-.searchSubmit:hover{
+
+.searchSubmit:hover {
     transform: scale(1.02);
     cursor: pointer;
 }
-.searchContainer{
+
+.searchContainer {
     display: flex;
 }
-.search{
+
+.search {
     width: 250px;
     height: 25px;
     border: none;
     /* border-radius: 25px; */
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
-
     padding: 10px;
     background-color: #52796f;
     color: #ffff;
     font-weight: 500;
     font-size: 15px;
 }
+
 /* log in/out */
-
-
+.logout {
+    width: 60px;
+    height: 50px;
+    background-color: #2f3e46;
+    color: #ffff;
+    border: none;
+    border-radius: 10px;
+    transition: background-color 0.1s;
+}
+.logout:hover{
+    background-color: #52796f;
+    color: #ffff;
+    cursor: pointer;
+    transform: scale(1.02);
+}
 /* Media queries */
 @media screen and (max-width: 1340px) {
-    .left-container{
+    .left-container {
         width: 10%;
         min-width: 100px;
     }
-  }
+}
