--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -50,11 +50,12 @@ body {
 /* center */
 .center-top {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 20px;
+    width: 100%;
 }
 
-.center-top li {
+/* .center-top li {
     list-style: none;
     width: 50px;
     height: 50px;
@@ -66,7 +67,7 @@ body {
     justify-content: center;
     color: #ffff;
     font-size: 10px;
-}
+} */
 
 .center-top-underline {
     /* width: 90%; */
@@ -111,6 +112,28 @@ body {
 
 .searchContainer {
     display: flex;
+    width: calc(25% - 20px);
+    border-radius: 10px;
+    /* padding: 50px; */
+    box-sizing: border-box;
+    text-align: center;
+    /* border: 1px solid grey; */
+    background-color: #2f3e46;
+    margin: 10px;
+    color: #ffff;
+    transition: background-color 0.5s, transform 0.5s;
+}
+.searchContainer:hover{
+    transform: scale(1.01);
+    background-color: #33434c;
+    cursor: pointer;
+
+}
+.search-response-img img{
+    width: 90%;
+    height: auto;
+    margin-top: 10px;
+    border-radius: 5px;
 }
 
 .search {
@@ -126,7 +149,19 @@ body {
     font-weight: 500;
     font-size: 15px;
 }
-
+.search-response{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.search-artist{
+    padding: 10px;
+    /* margin-bottom: auto; */
+    align-self: flex-end;
+}
+.search-input{
+    margin-left: 10px;
+}
 /* log in/out */
 .logout {
     width: 60px;
@@ -136,12 +171,23 @@ body {
     border: none;
     border-radius: 10px;
     transition: background-color 0.1s;
+    margin-right: 50px;
 }
 .logout:hover{
     background-color: #52796f;
     color: #ffff;
     cursor: pointer;
     transform: scale(1.02);
+}
+.center-top-loggedin{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 10px;
+
+}
+.card-container{
+    display: flex;
+    flex-direction: column;
 }
 /* Media queries */
 @media screen and (max-width: 1340px) {
