--- a/src/profile.css
+++ b/src/profile.css
@@ -1,6 +1,6 @@
 .profile-image{
    border-radius: 50%;
-   border: 2px solid #000000;
+   border: 2px solid #2f3e46;
 }
 .dropdown-content{
     width: 200px;
