--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -155,6 +155,19 @@ transform: translate(-50%, -50%); */
 }
 
 /* Search */
+.homebutton{
+    background-color: #ffffff00;
+    border: none;
+}
+#homebuttonsvg{
+    width: 40px;
+    height: 40px;
+    fill: #fff;
+}
+#homebuttonsvg:hover{
+    transform: scale(1.02);
+    cursor: pointer;
+}
 .searchSubmit {
     background-color: #2f3e46;
     width: 65px;
@@ -207,8 +220,7 @@ transform: translate(-50%, -50%); */
     height: 25px;
     border: none;
     /* border-radius: 25px; */
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
+    border-radius: 10px;
     padding: 10px;
     background-color: #52796f;
     color: #ffff;
@@ -231,6 +243,7 @@ transform: translate(-50%, -50%); */
 
 .search-input {
     margin-left: 10px;
+    display: flex;
 }
 
 /* log in/out */
