--- a/src/profile.css
+++ b/src/profile.css
@@ -5,17 +5,37 @@
 .dropdown-content{
     width: 200px;
     height: 50px;
-    background-color: #2f3e46;
+    /* background-color: #2f3e46; */
+    /* border-radius: 10px; */
     text-decoration: none;
     list-style: none;
     color: #ffff;
     /* margin-top: 10px; */
     font-size: 20px;
     text-align: center;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
 }
+
+/* .profile-container{
+    height: auto;
+    width: 50px;
+    border-radius: 10px;
+    background-color: #2f3e46;
+} */
 .dropdown-absolute{
     position: absolute;
     z-index: 999;
+}
+.dorpdown-container{
+    width: 250px;
+    height: 15vh;
+    background-color: #2f3e46;
+    border-radius: 10px;
+    position: absolute;
+    z-index: 999;
+    margin-top: 10px;
 }
 li{
     text-decoration: none;
