--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -31,7 +31,7 @@ body {
 .left-container,
 .right-container,
 .center-container {
-    height: 90vh;
+    height: calc(100vh - 40px);
     background-color: #354f52;
     border-radius: 10px;
     border: none;
@@ -52,6 +52,7 @@ body {
     flex: 1;
     margin: 0 10px;
     overflow: auto;
+    height: calc(100vh - 20px);
 }
 
 /* center */
@@ -70,6 +71,7 @@ body {
     position: relative;
     text-align: center;
 }
+
 /* position: absolute;
 top: 50%;
 left: 50%;
@@ -77,7 +79,7 @@ transform: translate(-50%, -50%); */
 /* .album:hover{
     background-color: rgb(240, 165, 14);
 } */
-.album-text{
+.album-text {
     color: #ffff;
     position: absolute;
     top: 50%;
@@ -87,20 +89,22 @@ transform: translate(-50%, -50%); */
     font-size: 15px;
     cursor: pointer;
 }
-.album img{
+
+.album img {
     width: 100%;
     opacity: 25%;
     /* margin-top: 5px; */
     border-radius: 5px;
 }
+
 .album:hover img,
-.album-text:hover
-{
+.album-text:hover {
     opacity: 100%;
     cursor: pointer;
     color: rgb(240, 165, 14);
 }
-.album:hover .album-text{
+
+.album:hover .album-text {
     display: none;
 }
 
@@ -155,19 +159,22 @@ transform: translate(-50%, -50%); */
 }
 
 /* Search */
-.homebutton{
+.homebutton {
     background-color: #ffffff00;
     border: none;
 }
-#homebuttonsvg{
+
+#homebuttonsvg {
     width: 40px;
     height: 40px;
     fill: #fff;
 }
-#homebuttonsvg:hover{
+
+#homebuttonsvg:hover {
     transform: scale(1.02);
     cursor: pointer;
 }
+
 .searchSubmit {
     background-color: #2f3e46;
     width: 65px;
@@ -277,9 +284,56 @@ transform: translate(-50%, -50%); */
     flex-direction: column;
 }
 
+/* center */
+.home-container {
+    padding: 10px;
+    background-color: #2f3e46;
+    border-radius: 10px;
+    margin: 5px;
+    width: 15%;
+    margin-bottom: 20px;
+    transition: transform 0.2s, background-color 0.2s;
+}
+.home-container:hover {
+    padding: 10px;
+    background-color: #2f3e465c;
+    cursor: pointer;
+    transform: scale(1.02);
+}
+.home-container:hover p{
+    color: #ebebeb80;
+    cursor: pointer;
+}
+
+.home-flex {
+    display: flex;
+    color: #fff;
+    /* padding: 10px; */
+    overflow: auto;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.homepage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.homepage h2,
+.homepage h3 {
+    padding: 10px;
+    color: #fff;
+}
+
+.home-flex img {
+    width: 100%;
+    border-radius: 10px;
+    -webkit-box-shadow: 3px 3px 22px -6px #000000;
+    box-shadow: 3px 3px 22px -6px #000000;
+}
+
 /* center playlist */
 .playlist-container {
-    padding-left: 10px;
+    /* padding-left: 10px; */
 }
 
 .playlist-selected {
@@ -358,9 +412,11 @@ transform: translate(-50%, -50%); */
 /* Media queries */
 @media screen and (max-width: 1340px) {
     .left-container {
-        width: 10%;
-        min-width: 100px;
+        width: 5%;
+        min-width: 50px;
+        margin: 0 auto;
     }
+
     .album {
         width: 50%;
     }
