--- a/src/profile.css
+++ b/src/profile.css
@@ -30,13 +30,19 @@
 }
 .dorpdown-container{
     width: 250px;
-    height: 15vh;
+    height: 18vh;
     background-color: #2f3e46;
     border-radius: 10px;
     position: absolute;
     z-index: 999;
     margin-top: 10px;
+    padding: 10px;
 }
 li{
     text-decoration: none;
+}
+hr{
+    border: 1px solid black;
+    width: 100%;
+    margin-top: 10px;
 }
