--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -256,7 +256,8 @@ transform: translate(-50%, -50%); */
 
 /* log in/out */
 .logout {
-    width: 60px;
+    width: 100%;
+    margin-top: 5px;
     height: 50px;
     background-color: #2f3e46;
     color: #ffff;
@@ -431,8 +432,13 @@ width: 40%;
         min-width: 50px;
         margin: 0 auto;
     }
-
     .album {
         width: 50%;
+    }
+}
+@media screen and (max-width: 900px) {
+
+    .right-container{
+        min-width: 200px;
     }
 }
