--- a/src/spotifyPlayer.css
+++ b/src/spotifyPlayer.css
@@ -1,12 +1,20 @@
 .currently-playing img{
-    height: 400px;
+    /* height: 400px; */
     border-radius: 10px;
+    width: 100%;
 }
 
 .currently-playing p{
     color: #cad2c5b9;
+    /* margin-right: auto; */
 }
 
 .currently-playing{
     color: #ffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.song-details{
+    margin-right: auto;
 }
